fix final cta z-index

--- a/_less/global.less
+++ b/_less/global.less
@@ -252,7 +252,7 @@ footer {
 	width: 100%;
 	transition: background-color .25s linear;
 	position: relative;
-	z-index: -1;
+	z-index: 100;
 	div {
 		position: relative;
 		padding: @1-rem*@first-modular 0;
